Fixed Github link position on mobile

--- a/style.css
+++ b/style.css
@@ -177,4 +177,8 @@ a:hover {
   #generate-user-btn {
     width: 100%;
   }
+
+  a {
+    bottom: 10px;
+  }
 }
